minor corr, cosmetix

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "helloWorld",
+    "name": "hello-world",
     "version": "0.0.3",
     "description": "helloWorld",
     "authors": [],
