--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "helloWorld",
+  "name": "hello-world",
   "description": "helloWorld Project Generated from HotTowel Angular",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "init": "npm install",
     "install": "bower install",
