interface testing mit netbeans Signed-off-by:rogera <wolfgang.schuessel@gmail.com>

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-    "name": "helloWorld",
-    "version": "0.0.3",
+    "name": "ase-hting-angular",
+    "version": "0.0.4",
     "description": "helloWorld",
     "authors": [],
     "license": "MIT",
