--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "helloWorld",
+  "name": "ase-hting-angular",
   "description": "helloWorld Project Generated from HotTowel Angular",
-  "version": "0.0.2",
+  "version": "0.0.4",
+  "license": "copyleft - original hting by papa",
+  "repository": "https://github.com/wolfhesse/hting.d.git",
   "scripts": {
     "init": "npm install",
     "install": "bower install",
@@ -61,7 +63,7 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-growl-reporter": "^0.1.1",
     "karma-mocha": "^0.1.4",
-    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-phantomjs-launcher": "^1.0.1",
     "karma-safari-launcher": "^0.1.1",
     "karma-sinon": "^1.0.3",
     "lodash": "^2.4.1",
@@ -70,7 +72,8 @@
     "mocha": "^1.20.1",
     "mocha-clean": "^0.4.0",
     "node-notifier": "^4.0.3",
-    "phantomjs": "1.9.9",
+    "optipng-bin":"",
+    "phantomjs": "^2.1.1",
     "plato": "^1.2.0",
     "q": "^1.0.1",
     "sinon": "^1.12.2",
